# panhandle

./: .gitignore  .gitlab-ci.yml  .runner-config.toml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  REVIEW.md  REVIEW_SUMMARY.md  TODO.md  opencode.json  panhandle-sbom.spdx
.github/: dependabot.yml
.github/workflows/: ci.yml
.opencode/: README.md
.opencode/skills/aya-ebpf/: SKILL.md
.opencode/skills/hpc-monitoring/: SKILL.md
.opencode/skills/panhandle/: SKILL.md
.opencode/skills/rust-ebpf/: SKILL.md
archive/: SLES-Basic-Containerfile  SLES-Containerfile.yaml  tetragon_example.rs
archive/test_results/: Panhandle_Test_Plan.docx  pav_test.md
files/: config.yaml  logrotate-panhandle  panhandle-presentation.pptx  panhandle.man  panhandle.service  test-config.json
panhandle/: .gitignore  Cargo.toml  README.md  deny.toml  panhandle-sbom.spdx
panhandle/.cargo/: config.toml
panhandle/panhandle/: Cargo.toml  build.rs  test_cpu_monitoring.sh
panhandle/panhandle-common/: Cargo.toml
panhandle/panhandle-common/src/: lib.rs
panhandle/panhandle-ebpf/: Cargo.toml  build.rs
panhandle/panhandle-ebpf/src/: cpu_usage.rs  fmsh.rs  main.rs  readline.rs  socket.rs  vanilla_execve.rs  vmlinux.rs  zlentry.rs
panhandle/panhandle/src/: helpers.rs  input_configs.rs  main.rs  monitor_cpu_usage.rs  monitor_gpu_usage.rs  monitor_io_usage.rs  monitor_network_usage.rs  procfs.rs  procfs_helpers.rs  unit_tests.rs
scripts/: install  lint  post-uninstall-rpm.sh  pre-install-rpm.sh  rust_install.sh  sles_build.sh  suse.sh  test_cpu_monitoring.sh  update
test-configs/: all-bools.json  all-bools.yaml  default.yaml  invalid.json  invalid.xml  invalid.yaml  non-bools.json  non-bools.yaml
