[workspace]
resolver = "2"
members = ["panhandle", "panhandle-common", "panhandle-ebpf"]
default-members = ["panhandle", "panhandle-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.3", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.0", default-features = false }

env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "8.0.0", features = [ "real-sys" ]}
