[workspace]
resolver = "2"
members = ["panhandle", "panhandle-common", "panhandle-ebpf"]
default-members = ["panhandle", "panhandle-common"]

[workspace.dependencies]
aya = { version = "0.14.0", default-features = false }
aya-build = { version = "0.2.0", default-features = false }
aya-ebpf = { version = "0.2.0", default-features = true }
aya-log = { version = "0.3.0", default-features = false }
aya-log-ebpf = { version = "0.2.0", default-features = false }

env_logger = { version = "0.11.10", default-features = false }
libc = { version = "0.2.186", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.52.2", default-features = false }
which = { version = "8.0.2", features = [ "real-sys" ]}
